Add blocking text embedding method for pipeline processor
Signed-off-by: Zan Niu <zaniu@amazon.com>